Modifique errores de sintaxis

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-
+</head>
 <body>
   <h1>CodAcess</h1>
-  <dvi id="root">
+  <div id="root">
     <form action="index.html" method="POST">
 
       <br><br>
