--- a/src/inicio.html
+++ b/src/inicio.html
@@ -27,6 +27,6 @@
         <input type="button" id="empezar" name="empezar" value="Empezar">
     </div>
     <script src="index.js"></script>
-
+    <script src="index2.js"></script>
 </body>
 </html>
