Agrege boton de inicio

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,9 @@
       <input type="text" class="caja-texto" name="textoCifrado" id="resultado" required />
       <br><br><br>
 
-      <input type="button" class="boton" id="Codificar" name="Codificar" value="Codificar" />
-      <input type="button" class="boton" id="Decodificar" name="Decodificar" value="Decodificar" />
+      <input type="button" class="boton" id="Codificar" name="codificar" value="Codificar" />
+      <input type="button" class="boton" id="Decodificar" name="decodificar" value="Decodificar" />
+      <input type="button" class="boton-inicio" id="inicio" name="inicio" value="Inicio"/>
       <br><br><br>
     </form>
   </div>
