Agrege boton de limpiar

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
 
       <input type="button" class="boton" id="Codificar" name="codificar" value="Codificar" />
       <input type="button" class="boton" id="Decodificar" name="decodificar" value="Decodificar" />
-      <input type="button" class="boton-inicio" id="inicio" name="inicio" value="Inicio"/>
+      <input type="button" class="boton" id="limpiar" name="limpiar" value="Limpiar">
+      <input type="button" class="boton" id="inicio" name="inicio" value="Inicio"/>
       <br><br><br>
     </form>
   </div>
